// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates proptypes for rss 1`] = `
{
  "channelCategory": {
    "tags": {
      "defaultValue": "",
      "description": "Category that describes this RSS feed, if blank it will be excluded",
      "group": "Channel",
      "label": "Category",
    },
    "type": "string",
  },
  "channelCopyright": {
    "tags": {
      "defaultValue": "",
      "description": "RSS Copyright value otherwise it will be excluded",
      "group": "Channel",
      "label": "Copyright",
    },
    "type": "string",
  },
  "channelDescription": {
    "tags": {
      "defaultValue": "",
      "description": "RSS Channel Description, defaults to website name + " News Feed"",
      "group": "Channel",
      "label": "RSS Description",
    },
    "type": "string",
  },
  "channelLanguage": {
    "tags": {
      "defaultValue": "",
      "description": "ISO-639 Language code, if blank uses value from feedLanguage in blocks.json. Use Exclude to remove this field.",
      "group": "Channel",
      "label": "RSS Language",
    },
    "type": "string",
  },
  "channelLogo": {
    "tags": {
      "defaultValue": "",
      "description": "URL to the logo for this RSS feed",
      "group": "Channel",
      "label": "Logo URL",
    },
    "type": "string",
  },
  "channelTTL": {
    "tags": {
      "defaultValue": "1",
      "description": "Number of minutes to wait to check for new content, defaults to 1, hint to bots",
      "group": "Channel",
      "label": "Time To Live",
    },
    "type": "string",
  },
  "channelTitle": {
    "tags": {
      "defaultValue": "",
      "description": "RSS Channel Title, defaults to website name",
      "group": "Channel",
      "label": "RSS Title",
    },
    "type": "string",
  },
  "channelUpdateFrequency": {
    "tags": {
      "defaultValue": "1",
      "description": "Number of Update Periods to wait to check for new content, defaults to 1",
      "group": "Channel",
      "label": "Update Frequency",
    },
    "type": "string",
  },
  "channelUpdatePeriod": {
    "args": [
      "hourly",
      "daily",
      "weekly",
      "monthly",
      "yearly",
      "Exclude field",
    ],
    "tags": {
      "defaultValue": "hourly",
      "description": "How frequently should bots revisit page, defaults to hourly",
      "group": "Channel",
      "label": "Update Period",
      "ordered": false,
    },
    "type": "oneOf",
  },
  "imageCaption": {
    "tags": {
      "defaultValue": "caption",
      "description": "ANS field to use for image caption in <media:caption> tag, defaults to caption",
      "group": "Featured Media",
      "label": "ANS image caption key",
    },
    "type": "string",
  },
  "imageCredits": {
    "tags": {
      "defaultValue": "credits.by[].name",
      "description": "ANS field to use for image credits in <media:credits> tag, defaults to credits.by[].name",
      "group": "Featured Media",
      "label": "ANS image credits key",
    },
    "type": "string",
  },
  "imageTitle": {
    "tags": {
      "defaultValue": "title",
      "description": "ANS field to use for featured media title in <media:title> tag, defaults to title",
      "group": "Featured Media",
      "label": "ANS image title key",
    },
    "type": "string",
  },
  "includeContent": {
    "args": [
      "0",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
      "10",
      "all",
    ],
    "tags": {
      "defaultValue": "all",
      "description": "Number of paragraphs to include, defaults to all",
      "group": "Item",
      "label": "Number of paragraphs to include",
    },
    "type": "oneOf",
  },
  "includePromo": {
    "tags": {
      "defaultValue": true,
      "description": "Include featured media in <media:content>",
      "group": "Featured Media",
      "label": "Include promo items",
    },
    "type": "bool",
  },
  "itemCategory": {
    "tags": {
      "defaultValue": "",
      "description": "ANS field to use for article category, if blank will be excluded",
      "group": "Item",
      "label": "Category",
    },
    "type": "string",
  },
  "itemCredits": {
    "tags": {
      "defaultValue": "credits.by[].name",
      "description": "ANS value for credits in the <dc:creator> tag, will join multiple names with a comma. defaults to credits.by[].name",
      "group": "Item",
      "label": "ANS credits key",
    },
    "type": "string",
  },
  "itemDescription": {
    "tags": {
      "defaultValue": "description.basic",
      "description": "ANS fields to use for article description, defaults to description.basic",
      "group": "Item",
      "label": "Description",
    },
    "type": "string",
  },
  "itemTitle": {
    "tags": {
      "defaultValue": "headlines.basic",
      "description": "ANS fields to use for article title, defaults to headlines.basic",
      "group": "Item",
      "label": "Title",
    },
    "type": "string",
  },
  "promoItemsJmespath": {
    "tags": {
      "defaultValue": "promo_items.basic || promo_items.lead_art",
      "description": "ANS fields to use for featured media, defaults to promo_items.basic || promo_items.lead_art",
      "group": "Featured Media",
      "label": "Path to promo_items",
    },
    "type": "string",
  },
  "pubDate": {
    "args": [
      "created_date",
      "display_date",
      "first_publish_date",
      "last_updated_date",
      "publish_date",
    ],
    "tags": {
      "defaultValue": "display_date",
      "description": "Which date field should be used, defaults to display_date",
      "group": "Item",
      "label": "Publication Date",
    },
    "type": "oneOf",
  },
  "resizerKVP": {
    "tags": {
      "defaultValue": {
        "height": 0,
        "width": 0,
      },
      "description": "Optional height and or width to resize all images to",
      "group": "Featured Media",
      "label": "Image height and or width",
    },
    "type": "kvp",
  },
  "videoSelect": {
    "tags": {
      "defaultValue": {
        "bitrate": 2000,
        "stream_type": "mp4",
      },
      "description": "Which criteria should be used to filter video encodings, defaults to { bitrate: 2000, stream_type: "mp4" }",
      "group": "Video",
      "label": "Video Encoding",
    },
    "type": "kvp",
  },
}
`;

exports[`generates proptypes for sitemap 1`] = `
{
  "changeFreq": {
    "args": [
      "always",
      "hourly",
      "daily",
      "weekly",
      "monthly",
      "yearly",
      "never",
      "Exclude field",
    ],
    "tags": {
      "defaultValue": "always",
      "description": "What is the expected Change frequency of the sitemap, hint for bots",
      "group": "Format",
      "label": "change frequency",
      "ordered": false,
    },
    "type": "oneOf",
  },
  "includePromo": {
    "tags": {
      "defaultValue": true,
      "description": "Include featured media in the sitemap",
      "group": "Featured Media",
      "label": "Include promo items",
    },
    "type": "bool",
  },
  "lastMod": {
    "args": [
      "created_date",
      "display_date",
      "first_publish_date",
      "last_updated_date",
      "publish_date",
    ],
    "tags": {
      "defaultValue": "last_updated_date",
      "description": "Which date field should be used in the sitemap",
      "group": "Format",
      "label": "Last Modified Date",
    },
    "type": "oneOf",
  },
  "priority": {
    "args": [
      "0.0",
      "0.1",
      "0.2",
      "0.3",
      "0.4",
      "0.5",
      "0.6",
      "0.7",
      "0.8",
      "0.9",
      "1.0",
      "Exclude field",
    ],
    "tags": {
      "defaultValue": "0.5",
      "description": "What is the priority of the content in the sitemap, hint for bots",
      "group": "Format",
      "label": "priority",
    },
    "type": "oneOf",
  },
  "promoItemsJmespath": {
    "tags": {
      "defaultValue": "promo_items.basic || promo_items.lead_art",
      "description": "ANS fields to use for featured media, defaults to promo_items.basic || promo_items.lead_art",
      "group": "Featured Media",
      "label": "Path to promo_items",
    },
    "type": "string",
  },
  "resizerKVP": {
    "tags": {
      "defaultValue": {
        "height": 0,
        "width": 0,
      },
      "description": "Optional height and or width to resize all images to",
      "group": "Featured Media",
      "label": "Image height and or width",
    },
    "type": "kvp",
  },
}
`;

exports[`omits specified properties from sitemap propypes 1`] = `
{
  "changeFreq": {
    "args": [
      "always",
      "hourly",
      "daily",
      "weekly",
      "monthly",
      "yearly",
      "never",
      "Exclude field",
    ],
    "tags": {
      "defaultValue": "always",
      "description": "What is the expected Change frequency of the sitemap, hint for bots",
      "group": "Format",
      "label": "change frequency",
      "ordered": false,
    },
    "type": "oneOf",
  },
  "lastMod": {
    "args": [
      "created_date",
      "display_date",
      "first_publish_date",
      "last_updated_date",
      "publish_date",
    ],
    "tags": {
      "defaultValue": "last_updated_date",
      "description": "Which date field should be used in the sitemap",
      "group": "Format",
      "label": "Last Modified Date",
    },
    "type": "oneOf",
  },
  "priority": {
    "args": [
      "0.0",
      "0.1",
      "0.2",
      "0.3",
      "0.4",
      "0.5",
      "0.6",
      "0.7",
      "0.8",
      "0.9",
      "1.0",
      "Exclude field",
    ],
    "tags": {
      "defaultValue": "0.5",
      "description": "What is the priority of the content in the sitemap, hint for bots",
      "group": "Format",
      "label": "priority",
    },
    "type": "oneOf",
  },
  "promoItemsJmespath": {
    "tags": {
      "defaultValue": "promo_items.basic || promo_items.lead_art",
      "description": "ANS fields to use for featured media, defaults to promo_items.basic || promo_items.lead_art",
      "group": "Featured Media",
      "label": "Path to promo_items",
    },
    "type": "string",
  },
  "resizerKVP": {
    "tags": {
      "defaultValue": {
        "height": 0,
        "width": 0,
      },
      "description": "Optional height and or width to resize all images to",
      "group": "Featured Media",
      "label": "Image height and or width",
    },
    "type": "kvp",
  },
}
`;
